Pushing finished framework waiting on data

--- a/framework/index.html
+++ b/framework/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <!-- Setting Webpage page title-->
-  <title>Web-Bootstrap-Challenge</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>OilPriceWeather Group Project</title>
+
+  <!--Adding bootstrap for webpage design-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
 
 <!-- Setting Webpage header-->
 <div class="text-center" >
-  <h1 style="color:black;">Web-Bootstrap-Challenge</h1>
+  <h1 style="color:black;">Oil Price & Weather Group Project</h1>
   <p></p>
 </div>
 
@@ -18,7 +21,9 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+   
+  <!--Adding D3 for charts-->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 
 <!-- Setting Webpage navbar and drop down menu-->
   <div class="navigation" style = "background-color:rgba(0, 0, 0, 0.5);">
@@ -31,13 +36,11 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        PLOTS
+                        CHARTS
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style = "background-color:rgba(0, 0, 0, 0.5);">
-                        <a class="dropdown-item" href="temp.html" style="color:grey;">Max Temperature</a>
-                        <a class="dropdown-item" href="humidity.html" style="color:grey;">Humidity</a>
-                        <a class="dropdown-item" href="cloudiness.html" style="color:grey;">Cloudiness</a>
-                        <a class="dropdown-item" href="wind_speed.html" style="color:grey;">Wind Speed</a>
+                        <a class="dropdown-item" href="humidity.html" style="color:grey;">Iraq War</a>
+                        <a class="dropdown-item" href="cloudiness.html" style="color:grey;">Previous 18 years</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -57,47 +60,42 @@
 <div class="container" style="color:black;">
   <div class="row">
     <div class="col-md-12">
-      <p>In this homework, I will be creating a visualization dashboard website using visualizations I have created in past assignments. Specifically, I will be plotting using [weather data](Resources/cities.csv).
-
-        In building this dashboard, I will create individual pages for each plot and a means by which users can navigate between them. These pages will contain the visualizations and their corresponding explanations. I will also have a landing page, a page where users can see a comparison of all of the plots, and another page where users can view the data used to build them.</p>
+      <p>The purpose of this website and group project is to explore the relationship between gas and oil barrel prices and various 
+        historical events over a time of 18 years. It has been speculated that certain historical events have had some effect on the rise 
+        and fall of gas and oil barrel prices. This project is intended to show those relationships and prove or disprove whether 
+        they are significantly related or not.</p>
     </div>
-
+   </div>
     <!-- Showing the vizualization pages and image previews-->
-    </div>
+ 
     <h3 class="text-center">Visualization Page Previews</h3>
 	<div class="row">
     
     <div class="col-sm-6 col-md-3">
       <p>
-          <h5>City Latitude vs. Max Temperature</h5>
-          <a href="temp.html">
-            <img alt="Temperature plot" src="assets/images/Fig1.PNG" class="img-thumbnail">
-         </a>
-     </p>
+          <h5></h5><!--setting empty boostrap container for page spacing-->
+      </p>
     </div>
     <div class="col-sm-6 col-md-3">
         <p>
-            <h5>City Latitude vs. Humidity</h5>
-            <a href="humidity.html">
-              <img alt="Humidity plot" src="assets/images/Fig2.PNG" class="img-thumbnail">
+            <h5>Oil Barrel Prices</h5>
+            <a href="oilBarrel.html">
+              <img alt="Oil Prices plot" src="assets/images/oil-barrel.png" class="img-thumbnail">
            </a>
        </p>
     </div>
     <div class="col-sm-6 col-md-3">
         <p>
-            <h5>City Latitude vs. Cloudiness</h5>
-            <a href="cloudiness.html">
-              <img alt="Cloudiness plot" src="assets/images/Fig3.PNG" class="img-thumbnail">
+            <h5>Gas Pump Prices</h5>
+            <a href="gasPump.html">
+              <img alt="Gas Prices plot" src="assets/images/gas-pump.png" class="img-thumbnail">
            </a>
        </p>
     </div>
     <div class="col-sm-6 col-md-3">
-        <p>
-            <h5>City Latitude vs. Wind Speed</h5>
-            <a href="wind_speed.html">
-              <img alt="Wind Speed plot" src="assets/images/Fig4.PNG" class="img-thumbnail">
-           </a>
-       </p>
+      <p>
+          <h5></h5><!--setting empty boostrap container for page spacing-->
+      </p>
     </div>	
    </div>
 
