--- a/framework/data.html
+++ b/framework/data.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <!-- Setting Webpage page title-->
-  <title>Web-Bootstrap-Challenge</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>OilPriceWeather Group Project</title>
+
+  <!--Adding bootstrap for webpage design-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
 
 <!-- Setting Webpage header-->
 <div class="text-center" >
-  <h1 style="color:black;">Web-Bootstrap-Challenge</h1>
+  <h1 style="color:black;">Oil Price & Weather Group Project</h1>
   <p></p>
 </div>
 
@@ -18,7 +21,9 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+   
+  <!--Adding D3 for charts-->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 
 <!-- Setting Webpage navbar and drop down menu-->
   <div class="navigation" style = "background-color:rgba(0, 0, 0, 0.5);">
@@ -31,13 +36,11 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        PLOTS
+                        CHARTS
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style = "background-color:rgba(0, 0, 0, 0.5);">
-                        <a class="dropdown-item" href="temp.html" style="color:grey;">Max Temperature</a>
-                        <a class="dropdown-item" href="humidity.html" style="color:grey;">Humidity</a>
-                        <a class="dropdown-item" href="cloudiness.html" style="color:grey;">Cloudiness</a>
-                        <a class="dropdown-item" href="wind_speed.html" style="color:grey;">Wind Speed</a>
+                        <a class="dropdown-item" href="humidity.html" style="color:grey;">Iraq War</a>
+                        <a class="dropdown-item" href="cloudiness.html" style="color:grey;">Previous 18 years</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -51,8 +54,9 @@
     </nav>
 </div>
 <!-- Data table from pandas conversion-->
-
-<div class="table-responsive row col-sm-12 col-md-6 text-center">
+<div class="row justify-content-center">
+<div class="col-auto">
+<div class="table-responsive">
 <table border="1" class="dataframe" style="color:grey;">
   <thead>
     <tr style="text-align: right; color:grey;">
@@ -7183,6 +7187,8 @@
     </tr>
   </tbody>
 </table>
+</div>
+</div>
 </div>
 </body>
 </html>
