--- a/framework/data.html
+++ b/framework/data.html
@@ -16,7 +16,7 @@
 </div>
 
 </head>
-<body style="background-image: url('https://www-cdn.eumetsat.int/files/styles/16_9_large/s3/2020-06/ASpot_Weather.jpg?h=d1cb525d&itok=lvYWh_W8');">
+<body style="background-image: url('https://cdn.hipwallpaper.com/i/60/51/CAbQsT.jpg');">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -39,8 +39,8 @@
                         CHARTS
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style = "background-color:rgba(0, 0, 0, 0.5);">
-                        <a class="dropdown-item" href="humidity.html" style="color:grey;">Iraq War</a>
-                        <a class="dropdown-item" href="cloudiness.html" style="color:grey;">Previous 18 years</a>
+                        <a class="dropdown-item" href="IraqWar.html" style="color:grey;">Iraq War</a>
+                        <a class="dropdown-item" href="previousYrs.html" style="color:grey;">Previous 18 years</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -57,9 +57,9 @@
 <div class="row justify-content-center">
 <div class="col-auto">
 <div class="table-responsive">
-<table border="1" class="dataframe" style="color:grey;">
+<table border="1" class="dataframe" style="color:black;">
   <thead>
-    <tr style="text-align: right; color:grey;">
+    <tr style="text-align: right; color:black;">
       <th></th>
       <th>City_ID</th>
       <th>City</th>
