--- a/framework/index.html
+++ b/framework/index.html
@@ -24,6 +24,7 @@
    
   <!--Adding D3 for charts-->
   <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="../resources/static/js/app.js"></script>
 
 <!-- Setting Webpage navbar and drop down menu-->
   <div class="navigation" style = "background-color:rgba(0, 0, 0, 0.5);">
