updated data html

--- a/static/data.html
+++ b/static/data.html
@@ -32,7 +32,7 @@
 
   <!--Adding D3 for charts-->
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="/static/js/app.js"></script>
+  <script src="/static/js/data.js"></script>
 
   <!-- Setting Webpage navbar and drop down menu-->
   <div class="navigation" style="background-color:rgba(0, 0, 0, 0.5);">
@@ -72,8 +72,6 @@
         <table border="1" class="dataframe" style="color:black;">
           <thead>
             <tr style="text-align: right; color:black;">
-              <th>Week of</th>
-              <th>Price</th>
             </tr>
           </thead>
           <tbody>
