--- a/static/data.html
+++ b/static/data.html
@@ -32,6 +32,7 @@
 
   <!--Adding D3 for charts-->
   <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://d3js.org/d3-array.v2.min.js"></script>
   <script src="/static/js/app.js"></script>
 
   <!-- Setting Webpage navbar and drop down menu-->
