- Added second graphy focused on Iraq War - Added README with how to start the app

--- a/static/IraqWar.html
+++ b/static/IraqWar.html
@@ -55,6 +55,6 @@
         </nav>
     </div>
     <div id="plot"></div>
-    <script src="/static/js/plots.js"></script>
+    <script src="/static/js/plots-iraq.js"></script>
 </body>
 </html>
