data table code progress

--- a/static/data.html
+++ b/static/data.html
@@ -73,6 +73,19 @@
         <table border="1" class="dataframe" style="color:black;">
           <thead>
             <tr style="text-align: right; color:black;">
+              <td>Year</td>
+              <td>Jan</td>
+              <td>Feb</td>
+              <td>Mar</td>
+              <td>Apr</td>
+              <td>May</td>
+              <td>Jun</td>
+              <td>Jul</td>
+              <td>Aug</td>
+              <td>Sep</td>
+              <td>Oct</td>
+              <td>Nov</td>
+              <td>Dec</td>
             </tr>
           </thead>
           <tbody>
