--- a/static/comparison.html
+++ b/static/comparison.html
@@ -17,7 +17,7 @@
 </div>
 
 </head>
-<body style="background-image: url('https://cdn.hipwallpaper.com/i/60/51/CAbQsT.jpg');">
+<body style="background-image: url('https://cdn.hipwallpaper.com/i/60/51/CAbQsT.jpg'); background-size: cover; background-attachment: fixed">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -56,38 +56,208 @@
         </div>
     </nav>
 </div>
+ 
 
-<div class="col-sm-6 col-md-3">
+<div class="row justify-content-center">
+    <div class="col-auto">
     <p>
         
             <div id="plot0"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot1"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot2"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot3"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot4"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot5"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot6"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot7"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot8"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot9"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot10"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot11"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot12"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot13"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot14"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot15"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot16"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot17"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot18"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot19"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot20"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot21"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot22"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot23"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot24"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot25"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot26"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot27"></div>
+            <div class="row">
+                <div class="col-md-12">
+                  <p> 
+                  </p><!--setting empty boostrap container for page spacing-->
+                </div>
+               </div>
             <div id="plot28"></div>
             <script src="/static/js/c-chartplots.js"></script>
         
