--- a/framework/index.html
+++ b/framework/index.html
@@ -8,7 +8,7 @@
   <!--Adding bootstrap for webpage design-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 <!-- Setting Webpage header-->
 <div class="text-center" >
   <h1 style="color:black;">Oil Price & Weather Group Project</h1>
@@ -16,7 +16,7 @@
 </div>
 
 </head>
-<body style="background-image: url('https://cdn.hipwallpaper.com/i/60/51/CAbQsT.jpg'); background-size: cover; background-attachment: fixed">
+<body style="background-image: url('https://cdn.hipwallpaper.com/i/60/51/CAbQsT.jpg');">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
 <!-- Setting Webpage navbar and drop down menu-->
   <div class="navigation" style = "background-color:rgba(0, 0, 0, 0.5);">
     <nav class="navbar navbar-expand-lg navbar-dark ">
-        <a class="navbar-brand" href="/" style="color:grey;">Home</a>
+        <a class="navbar-brand" href="index.html" style="color:grey;">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,15 +39,15 @@
                         CHARTS
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style = "background-color:rgba(0, 0, 0, 0.5);">
-                        <a class="dropdown-item" href="/static/IraqWar.html" style="color:grey;">Iraq War</a>
-                        <a class="dropdown-item" href="/static/previousYrs.html" style="color:grey;">Previous 18 years</a>
+                        <a class="dropdown-item" href="IraqWar.html" style="color:grey;">Iraq War</a>
+                        <a class="dropdown-item" href="previousYrs.html" style="color:grey;">Previous 18 years</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/static/comparison.html">COMPARISON</a>
+                    <a class="nav-link" href="comparison.html">COMPARISON</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/static/data.html">DATA</a>
+                    <a class="nav-link" href="data.html">DATA</a>
                 </li>
             </ul>
         </div>
@@ -91,21 +91,17 @@
     <div class="col-sm-6 col-md-3">
         <p>
             <h5>Oil Barrel Prices</h5>
-            <div data-aos="flip-left">
-              <a href="/static/oilBarrel.html">
-                <img alt="Oil Prices plot" src="/static/assets/images/oil-barrel.png" class="img-thumbnail">
-            </a>
-          </div>
+            <a href="oilBarrel.html">
+              <img alt="Oil Prices plot" src="assets/images/oil-barrel.png" class="img-thumbnail">
+           </a>
        </p>
     </div>
     <div class="col-sm-6 col-md-3">
         <p>
             <h5>Gas Pump Prices</h5>
-            <div data-aos="flip-left">
-              <a href="/static/gasPump.html">
-                <img alt="Gas Prices plot" src="/static/assets/images/gas-pump.png" class="img-thumbnail">
-            </a>
-          </div>
+            <a href="gasPump.html">
+              <img alt="Gas Prices plot" src="assets/images/gas-pump.png" class="img-thumbnail">
+           </a>
        </p>
     </div>
     <div class="col-sm-6 col-md-3">
@@ -116,9 +112,5 @@
    </div>
 
 </div>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
 </body>
 </html>
