--- a/static/data.html
+++ b/static/data.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body style="background-image: url('https://cdn.hipwallpaper.com/i/60/51/CAbQsT.jpg');">
+<body style="background-image: url('https://cdn.hipwallpaper.com/i/60/51/CAbQsT.jpg'); background-size: cover; background-attachment: fixed;">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
