updated index file

--- a/static/index.html
+++ b/static/index.html
@@ -88,7 +88,7 @@
           <h5></h5><!--setting empty boostrap container for page spacing-->
       </p>
     </div>
-    <div class="col-sm-6 col-md-3">
+    <!-- <div class="col-sm-6 col-md-3">
         <p>
             <h5>Oil Barrel Prices</h5>
             <div data-aos="flip-left">
@@ -97,12 +97,12 @@
             </a>
           </div>
        </p>
-    </div>
+    </div> -->
     <div class="col-sm-6 col-md-3">
         <p>
             <h5>Gas Pump Prices</h5>
             <div data-aos="flip-left">
-              <a href="/static/gasPump.html">
+              <a href="/static/previousYrs.html">
                 <img alt="Gas Prices plot" src="/static/assets/images/gas-pump.png" class="img-thumbnail">
             </a>
           </div>
