--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <!-- Setting Webpage header-->
 <div class="text-center" >
-  <h1 style="color:black;">Oil Price & Weather Group Project</h1>
+  <h1 style="color:black;">Oil & Gasoline Price Group Project</h1>
   <p></p>
 </div>
 
@@ -60,9 +60,9 @@
 <div class="container" style="color:black;">
   <div class="row">
     <div class="col-md-12">
-      <p>The purpose of this website and group project is to explore the relationship between gas and oil barrel prices and various 
-        historical events over a time of 18 years. It has been speculated that certain historical events have had some effect on the rise 
-        and fall of gas and oil barrel prices. This project is intended to show those relationships and prove or disprove whether 
+      <p>The purpose of this website and group project is to explore the relationship between gasoline and oil barrel prices and various 
+        historical events over a time of 28 years. It has been speculated that certain historical events have had some effect on the rise 
+        and fall of gasoline and oil barrel prices. This project is intended to show those relationships and prove or disprove whether 
         they are significantly related or not.</p>
     </div>
    </div>
@@ -83,22 +83,28 @@
     <h3 class="text-center">Visualization Page Previews</h3>
 	<div class="row">
     
-    <div class="col-sm-6 col-md-3">
-      <p>
-          <h5></h5><!--setting empty boostrap container for page spacing-->
-      </p>
-    </div>
-    <!-- <div class="col-sm-6 col-md-3">
+    
+    <div class="col-sm-6 col-md-4">
         <p>
-            <h5>Oil Barrel Prices</h5>
+            <h5>Iraq War Chart</h5>
             <div data-aos="flip-left">
-              <a href="/static/oilBarrel.html">
-                <img alt="Oil Prices plot" src="/static/assets/images/oil-barrel.png" class="img-thumbnail">
+              <a href="/static/IraqWar.html">
+                <img alt="Oil Prices plot" src="/static/assets/images/iraq-country2.jpg" class="img-thumbnail">
             </a>
           </div>
        </p>
-    </div> -->
-    <div class="col-sm-6 col-md-3">
+    </div>
+    <div class="col-sm-6 col-md-4">
+      <p>
+        <h5>Oil Barrel Prices</h5>
+        <div data-aos="flip-left">
+          <a href="/static/oilBarrel.html">
+            <img alt="Oil Prices plot" src="/static/assets/images/oil-barrel.png" class="img-thumbnail">
+        </a>
+      </div>
+      </p>
+    </div>
+    <div class="col-sm-6 col-md-4">
         <p>
             <h5>Gas Pump Prices</h5>
             <div data-aos="flip-left">
@@ -108,12 +114,6 @@
           </div>
        </p>
     </div>
-    <div class="col-sm-6 col-md-3">
-      <p>
-          <h5></h5><!--setting empty boostrap container for page spacing-->
-      </p>
-    </div>	
-   </div>
 
 </div>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
