--- a/static/data.html
+++ b/static/data.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <!-- Setting Webpage page title-->
-  <title>OilPriceWeather Group Project</title>
+  <title>Oil & Gasoline Price Group Project</title>
 
   <!--Adding bootstrap for webpage design-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
