--- a/static/oilBarrel.html
+++ b/static/oilBarrel.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <!-- Setting Webpage page title-->
-  <title>OilPriceWeather Group Project</title>
+  <title>Oil & Gasoline Price Group Project</title>
 
   <!--Adding bootstrap for webpage design-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  
+
 <!-- Setting Webpage header-->
 <div class="text-center" >
   <h1 style="color:black;">Oil Price & Weather Group Project</h1>
