--- a/static/index.html
+++ b/static/index.html
@@ -83,8 +83,13 @@
     <h3 class="text-center">Visualization Page Previews</h3>
 	<div class="row">
     
-    
-    <div class="col-sm-6 col-md-4">
+  
+    <div class="col-sm-6 col-md-3">
+      <p>
+          <h5></h5><!--setting empty boostrap container for page spacing-->
+      </p>
+    </div>
+    <div class="col-sm-6 col-md-3">
         <p>
             <h5>Iraq War Chart</h5>
             <div data-aos="flip-left">
@@ -94,17 +99,17 @@
           </div>
        </p>
     </div>
-    <div class="col-sm-6 col-md-4">
+    <!-- <div class="col-sm-6 col-md-4">
       <p>
         <h5>Oil Barrel Prices</h5>
         <div data-aos="flip-left">
           <a href="/static/oilBarrel.html">
-            <img alt="Oil Prices plot" src="/static/assets/images/oil-barrel.png" class="img-thumbnail">
+            <img alt="Oil Prices plot" src="/static/assets/images/oil-barrel.png" class="img-thumbnail"> ****Not enogh time to finish this. commenting it out****
         </a>
       </div>
       </p>
-    </div>
-    <div class="col-sm-6 col-md-4">
+    </div> -->
+    <div class="col-sm-6 col-md-3">
         <p>
             <h5>Gas Pump Prices</h5>
             <div data-aos="flip-left">
@@ -114,8 +119,11 @@
           </div>
        </p>
     </div>
-
-</div>
+    <div class="col-sm-6 col-md-3">
+      <p>
+          <h5></h5><!--setting empty boostrap container for page spacing-->
+      </p>
+    </div>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
   AOS.init();
