updated css on data html

--- a/static/data.html
+++ b/static/data.html
@@ -70,22 +70,22 @@
   <div class="row justify-content-center">
     <div class="col-auto">
       <div class="table-responsive">
-        <table border="1" class="dataframe" style="color:black;">
+        <table border="1" class="dataframe" style="color:black;background-color:white;">
           <thead>
-            <tr style="text-align: right; color:black;">
-              <td>Year</td>
-              <td>Jan</td>
-              <td>Feb</td>
-              <td>Mar</td>
-              <td>Apr</td>
-              <td>May</td>
-              <td>Jun</td>
-              <td>Jul</td>
-              <td>Aug</td>
-              <td>Sep</td>
-              <td>Oct</td>
-              <td>Nov</td>
-              <td>Dec</td>
+            <tr style="text-align: left; color:black;">
+              <th>Year</th>
+              <th>Jan</th>
+              <th>Feb</th>
+              <th>Mar</th>
+              <th>Apr</th>
+              <th>May</th>
+              <th>Jun</th>
+              <th>Jul</th>
+              <th>Aug</th>
+              <th>Sep</th>
+              <th>Oct</th>
+              <th>Nov</th>
+              <th>Dec</th>
             </tr>
           </thead>
           <tbody>
