--- a/static/gasPump.html
+++ b/static/gasPump.html
@@ -40,7 +40,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style = "background-color:rgba(0, 0, 0, 0.5);">
                         <a class="dropdown-item" href="IraqWar.html" style="color:grey;">Iraq War</a>
-                        <a class="dropdown-item" href="previousYrs.html" style="color:grey;">Previous 18 years</a>
+                        <a class="dropdown-item" href="previousYrs.html" style="color:grey;">Gas Prices</a>
                     </div>
                 </li>
                 <li class="nav-item">
