--- a/static/gasPump.html
+++ b/static/gasPump.html
@@ -11,7 +11,7 @@
 
 <!-- Setting Webpage header-->
 <div class="text-center" >
-  <h1 style="color:black;">Oil Price & Weather Group Project</h1>
+  <h1 style="color:black;">US Gasoline Prices/Events Group Project</h1>
   <p></p>
 </div>
 
