--- a/static/oilBarrel.html
+++ b/static/oilBarrel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!-- Setting Webpage page title-->
-  <title>Oil & Gasoline Price Group Project</title>
+  <title>US Gasoline Prices/Events Group Project</title>
 
   <!--Adding bootstrap for webpage design-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
@@ -12,7 +12,7 @@
 
 <!-- Setting Webpage header-->
 <div class="text-center" >
-  <h1 style="color:black;">Oil Price & Weather Group Project</h1>
+  <h1 style="color:black;">US Gasoline Prices/Events Group Project</h1>
   <p></p>
 </div>
 
