--- a/static/previousYrs.html
+++ b/static/previousYrs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- Setting Webpage page title-->
-    <title>Oil & Gasoline Price Group Project</title>
+    <title>US Gasoline Prices/Events Group Project</title>
     
     <!--Adding bootstrap for webpage design-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Setting Webpage header-->
     <div class="text-center" >
-        <h1 style="color:black;">Oil Price & Weather Group Project</h1>
+        <h1 style="color:black;">US Gasoline Prices/Events Group Project</h1>
         <p></p>
     </div>
     
